--- a/style.css
+++ b/style.css
@@ -15,14 +15,19 @@ header {
     padding: 1rem;
     text-align: center;
     width: 100%;
+    height: 100px;
     position: fixed;
     top: 0;
 }
 
 nav a {
-    color: #fff;
-    margin: 0 1rem;
     text-decoration: none;
+    color: inherit;
+    padding: 10px;
+}
+
+nav a i {
+    margin-right: 5px;
 }
 
 main {
